# scaffold

./: .otto.yml  Cargo.toml  README.md  build.rs  scaffold.yml
benches/: scaffold_bench.rs
docs/: scaffold.md  test-summary.md
docs/design/: 2026-03-24-github-workflows.md
src/: cli.rs  config.rs  lib.rs  main.rs  templates.rs
tests/: end_to_end_tests.rs  integration_tests.rs  property_tests.proptest-regressions  property_tests.rs  unit_tests.rs
