[package]
name = "scaffold"
version = "0.1.0"
edition = "2024"
authors = ["Scott Idler <scott.a.idler@gmail.com>"]
build = "build.rs"
description = "A Rust CLI project scaffolding tool that generates production-ready CLI applications"
license = "MIT"
repository = "https://github.com/scottidler/scaffold"

[dependencies]
clap = { version = "4.5.40", features = ["derive"] }
colored = "3.0.0"
dirs = "6.0.0"
env_logger = "0.11.8"
eyre = "0.6.12"
log = "0.4.27"
serde = { version = "1.0.219", features = ["derive"] }
serde_yaml = "0.9.34"
# Dependencies will be added via cargo add - no static versions

[build-dependencies]
# For build.rs if needed

[dev-dependencies]
tempfile = "3.20"
assert_cmd = "2.0"
predicates = "3.1"
serial_test = "3.2"
criterion = "0.6"
proptest = "1.7"
toml = "0.8"

[[bench]]
name = "scaffold_bench"
harness = false 
